--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
         </script>
     </head>
     <body>
-        <div id="div_0" class="font">正</div>
-        <div id="div_1" class="font" style="display:none;">反</div>
+        <div id="div_0" class="font">
+            <img src="img/up.jpg">
+        </div>
+        <div id="div_1" class="font" style="display:none;">
+            <img src="img/down.jpg">
+        </div>
         <button id="btn_0" onclick="runRandom()" class="button orange">抛硬币</button><br/>
         <div>结果： 正占比<span id="one"></span>% , 反占比<span id="zero"></span>%</div>
         <br/>
