--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </head>
     <body>
         <div id="div_0" class="font">
-            <img src="img/up.png">
+            <img src="img/up_157_154.png">
         </div>
         <div id="div_1" class="font" style="display:none;">
-            <img src="img/down.png">
+            <img src="img/down_157_156.png">
         </div>
         <button id="btn_0" onclick="runRandom()" class="button orange">抛硬币</button><br/>
         <div>结果： 正占比<span id="one"></span>% , 反占比<span id="zero"></span>%</div>
